[gd_scene load_steps=2 format=3 uid="uid://dtjt0hk2vy50i"]

[ext_resource type="Script" path="res://game/ui/pause.gd" id="1_kdjjw"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kdjjw")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -270.5
offset_right = 206.0
offset_bottom = 270.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Title" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]PAUSE[/b][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="ContinueGame" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="BackToMainMenu" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
